[refactor] inventory log 고도화 (#159)
inventory log 고도화